syntax = "proto3";

package demo;

import "google/protobuf/wrappers.proto";

service UserService {
  rpc Create(CreateUserRequest) returns (google.protobuf.StringValue) {}
  rpc Get(google.protobuf.StringValue) returns (User) {}
  rpc Search(SearchUserRequest) returns (SearchUserResponse) {}
}

message CreateUserRequest {
  string name = 1;
  UserType type = 2;
  optional string email = 3;
}

message User {
  string id = 1;
  string name = 2;
  UserType type = 3;
  optional string email = 4;
}

message SearchUserRequest {
  string name = 1;
}

message SearchUserResponse {
  repeated User users = 1;
}

enum UserType {
  USER_TYPE_UNSPECIFIED = 0;
  USER_TYPE_INTERNAL = 1;
  USER_TYPE_EXTERNAL = 2;
}
